--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </html>
 
 <!-- Service Worker -->
-<!-- <script >
+<script >
   if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('./sw.js')
   .then(function(registration) {
@@ -66,4 +66,4 @@
     console.log('Service worker registration failed:', error);
   });
   }
-</script> -->
+</script>
