--- a/restaurant.html
+++ b/restaurant.html
@@ -16,12 +16,13 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
-    <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+      <h1><a href="./">Restaurant Reviews</a></h1>
+      <ul id="breadcrumb" >
       <li><a href="./">Home</a></li>
     </ul>
+    </nav>
+    <!-- Beginning breadcrumb -->
+    
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
